# github-code-review-agent

./: .env.example  .gitignore  README.md  docker-compose.yaml
github-code-review/: .gitignore
github-code-review-langchain/: .env.example  README.md  pyproject.toml
github-code-review-langchain/scripts/: visualize_bandit.py
github-code-review-langchain/src/github_code_review/: database.py  main.py
github-code-review-langchain/src/github_code_review/agents/: bandit.py  prompts.py  reviewer.py  synthesizer.py
github-code-review/src/github_code_review/: __main__.py  config.py  filters.py  models.py
github-code-review/src/github_code_review/agents/: bandit.py  prompts.py  reviewer.py  synthesizer.py
github-code-review/src/github_code_review/github/: client.py
workflows/: github-code-review-agents-RL.json
