[project]
name = "github-code-review"
version = "0.1.0"
description = "Multi-agent code review bot using LangChain and a multi-armed bandit for agent selection"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.32.0",
    "matplotlib>=3.9.0",
    "pandas>=2.2.0",
    "jupyter>=1.1.1",
]

[project.scripts]
github-code-review = "github_code_review.__main__:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "ruff>=0.15.15",
]
